--- a/plugin.yaml
+++ b/plugin.yaml
@@ -2,5 +2,5 @@ plugin:
     name: 'TailwindCSS Boilerplate Plugin'
     description: 'Only for use with the TailwindCSS Boilerplate theme: '
     author: RomainMazB
-    homepage: ''
+    homepage: 'https://www.maz.digital'
 
